--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -74,6 +74,12 @@ button:hover {
   cursor: pointer;
 }
 
+h3 {
+  font-size: inherit;
+  margin: 0px;
+  font-weight: normal;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -90,7 +96,9 @@ button:hover {
 }
 
 .welcome-user {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
+  font-weight: normal;
 }
 
 /* Agency Display */
