--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -308,8 +308,8 @@ input::-webkit-calendar-picker-indicator {
   display: grid;
   grid-template-columns: 300px 300px 300px;
   grid-template-rows: 300px;
-  /* grid-auto-rows: 300px; */
-  grid-auto-columns: 300px;
+  grid-auto-rows: 300px;
+  /* grid-auto-columns: 300px; */
   row-gap: 10px;
   column-gap: 50px;
 }
